# sccan

./: .env.example  .gitignore  README.md  app.py  config.toml  exercise_cardio.json  few_shot_examples.json  fifth_example.json  fourth_example.json  latest_prompt_debug.html  main.py  ocr_service.py  pyproject.toml  requirements.txt  test_camera.py  test_kiosk.py  test_ollama_ocr.py
PRD/: kiosk-capture-system-prd.md
Status Display Screen/: README.md  index.html  package.json
Status Display Screen/src/: App.tsx  index.css
Status Display Screen/src/components/: ScanWorkflow.tsx
examples/: exercise_strength.json  few_shot_examples.json  second_example.json  third_example.json
