[project]
name = "kiosk-capture"
version = "0.1.0"
description = "Self-service fitness form capture kiosk with vision LLM OCR"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.1",
    "pillow>=10.1.0",
    "numpy>=1.24.3",
    "httpx>=0.25.0",
    "streamlit>=1.28.0",
    "tomli>=2.0.1",
    "python-dotenv>=1.0.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
